[gd_scene load_steps=2 format=3 uid="uid://c5ea03deo43cm"]

[ext_resource type="Script" path="res://scripts/Task6_StabilizeBeam.gd" id="1_task6"]

[node name="Task6_StabilizeBeam" type="Node2D"]
script = ExtResource("1_task6")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 10.0
offset_top = 10.0
offset_right = 300.0
offset_bottom = 250.0

[node name="LabelInstructions" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Stabilize the Beam at Center"
theme_override_font_sizes/font_size = 16

[node name="LabelTimer" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Time: 10"

[node name="LabelStatus" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Stability: 0%"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="LeftButton" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "← Push Left"

[node name="RightButton" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Push Right →"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
